gitea/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
  namespace: gitea
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
    keel.sh/approvals: "1"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
        name: gitea
    spec:
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - 'amd64'
      containers:
      - name: gitea
        image: gitea/gitea:latest-rootless
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 400Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 60
        volumeMounts:
        - name: gitea-data
          mountPath: /var/lib/gitea
        - name: gitea-config
          mountPath: /etc/gitea
      automountServiceAccountToken: false
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: nfs-gitea-data
      - name: gitea-config
        persistentVolumeClaim:
          claimName: nfs-gitea-config
