gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea-http
  namespace: gitea
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: web
  selector:
    app: gitea
